@startuml

' ----- ENTITIES -----
class User {
    + UserID
    + Username
    + Email
    + Password
    + ProfilePicture
}

class Profile {
    + ProfileID
    + Bio
    + ProfilePicture
    + Genres
    + Posts
    + SongOTD
}

class Post {
    + PostID
    + Content
    + Date
}

class Like {
    + LikeID
}

class Comment {
    + CommentID
    + Content
    + CreatedAt
}

class Song {
    + SongID
    + SongName
    + Artist
}

class Album {
    + AlbumID
    + AlbumName
}

class Artist {
    + ArtistID
    + ArtistName
}

class Showcase {
    + ShowcaseID
}

' ----- RELATIONSHIPS -----

' User owns a Profile (Aggregation: Profile cannot exist without User)
User "1" o-- "1" Profile : "has"

' Profile can have multiple Posts (Aggregation)
Profile "1" o-- "*" Post : "includes"

' User creates Posts (Association)
User "1" --> "*" Post : "creates"

' Post receives Likes and Comments (Composition: Likes and Comments cannot exist without Post)
Post "1" *-- "*" Like : "receives"
Post "1" *-- "*" Comment : "receives"

' User can like and comment on posts
User "1" --> "*" Like : "likes"
User "1" --> "*" Comment : "comments on"

' Profile has a Showcase section (Aggregation)
Profile "1" o-- "1" Showcase : "has"

' Showcase contains Albums and Artists (Association)
Showcase "1" -- "*" Album : "has"
Showcase "1" -- "*" Artist : "has"

' ProfilePage can have multiple favorite Songs (Association)
Profile "1" -- "*" Song : "picks"

@enduml
